# cpptools

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
cmake/: assure_out_of_source_build.cmake  configure_common.cmake  configure_linker.cmake  configure_warnings.cmake
cmake/functions/: assure_out_of_source_build.cmake  configure_clang_tidy.cmake  configure_common.cmake  configure_cppcheck.cmake  configure_linker.cmake  configure_sanitizers.cmake  configure_warnings.cmake
cmake/lib/Catch2/: CMakeLists.txt
cmake/lib/MicrosoftGSL/: CMakeLists.txt
cmake/modules/: Cache.cmake  Linker.cmake  ProjectOptions.cmake  ProjectOptionsDefaults.cmake  Sanitizers.cmake  StaticAnalysis.cmake  Utilities.cmake  Warnings.cmake
modules/algorithms/: CMakeLists.txt
modules/algorithms/include/: merge_sort.hpp
modules/algorithms/test/: merge_sort.test.cpp
modules/assembly/: CMakeLists.txt  main.cpp
modules/assembly/assembly/: compile_explorer.asm  fibonacci.asm  some_function.asm
modules/data_structures/: CMakeLists.txt
modules/data_structures/include/: bit.hpp  bitarray.cpp  bitarray.hpp
modules/data_structures/lib/Catch2/: CMakeLists.txt
modules/data_structures/src/: bit.cpp  bitarray.cpp
modules/data_structures/test/: bitarray.test.cpp
modules/main/: CMakeLists.txt  main.asm  main.cpp
